--- a/app/src/main/res/layout/item_book_detail_comment_label.xml
+++ b/app/src/main/res/layout/item_book_detail_comment_label.xml
@@ -18,6 +18,7 @@
         android:layout_height="1px"
         android:layout_weight="1"/>
     <TextView
+        android:id="@+id/commentBtn"
         android:layout_width="151px"
         android:layout_height="42px"
         android:textSize="33px"
