--- a/app/src/main/res/layout/item_my_comment.xml
+++ b/app/src/main/res/layout/item_my_comment.xml
@@ -11,13 +11,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
+            android:id="@+id/nickNameTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="ICY 评论"
             android:textColor="#373737"
-            android:textSize="30px"
-            android:text="ICY 评论"/>
+            android:textSize="30px" />
+
         <TextView
+            android:id="@+id/bookNameTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#f86666"
@@ -26,6 +30,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/contentTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#838383"
@@ -33,6 +38,7 @@
         android:layout_marginTop="40px"
         android:text="啥时候更呢？求作者大大更新！好想看后续章节啊！等的着急！"/>
     <TextView
+        android:id="@+id/dateTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="21px"
