--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f9f4f6">
     <include
         layout="@layout/common_toolbar"/>
     <LinearLayout
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
+        android:layout_marginBottom="20dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@color/white"
@@ -30,4 +32,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
