--- a/app/src/main/res/layout/dialog_gift.xml
+++ b/app/src/main/res/layout/dialog_gift.xml
@@ -277,6 +277,16 @@
 
         </LinearLayout>
     </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="15dp"
+        android:padding="3dp"
+        android:textSize="14sp"
+        android:textColor="#ffffff"
+        android:background="@color/color_toolbar"
+        android:text="我要捧场"/>
 
 
 </LinearLayout>
