--- a/tenghen/src/main/res/layout/activity_about.xml
+++ b/tenghen/src/main/res/layout/activity_about.xml
@@ -6,7 +6,6 @@
     <include
         layout="@layout/common_toolbar"/>
     <LinearLayout
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_marginBottom="20dp"
         android:layout_height="wrap_content"
@@ -19,16 +18,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:textSize="39px"
+            android:textSize="18sp"
             android:text="关于我们"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#f3f4f6"
             android:layout_marginTop="42px"
-            android:textSize="32px"
+            android:textSize="14sp"
             android:textColor="#6a6a6a"
-            android:text="藤痕隶属于北京微风时代文化有限公司，由业内顶尖的内容运营团队倾心打造。(www.tenghen.com)是国内新锐的原创文学阅读创作平台，是集创作-阅读-出版-影视-改编-无限增值业务为一体的开放性内容平台。藤痕微风时代根于新媒体文化创意产业，"/>
+            android:text="@string/about"/>
     </LinearLayout>
 
 
