--- a/tenghen/src/main/res/layout/activity_read.xml
+++ b/tenghen/src/main/res/layout/activity_read.xml
@@ -53,14 +53,7 @@
                         android:textColor="#242424"
                         android:textSize="18sp"
                         android:lineSpacingExtra="14dp"
-                        android:text="从最初的乐天制果开始，乐天始终积极努力创造一个互相关爱、尊重个性和创意、共同幸福的社会。秉承为国家和社会发展做贡献的理念，乐天追求以最好的产品满足顾客需求。
-在业务方面，乐天选择最擅长的领域，并力争业界领先，尤其是在食品、零售、旅游、石化、建筑、金融等核心领域中确保了全球竞争力，以在2020年成为“亚洲十强跨国企业”为目标不断努力。[1]
-20世纪70年代，乐天集团通过成立乐天七星饮料、乐天三冈、乐天火腿肠、乐天利等公司，发展成韩国最大的食品企业。而且，乐天集团还通过成立乐天建设、湖南石油化学、乐天机工、乐天电子、乐天商事全面进军国家基础设施建设产业领域。
-20世纪80年代，乐天集团以资本和技术积累为基础，在流通、旅游、食品产业领域确保了最高水平的竞争力，成为名副其实的韩国十大企业。此外，乐天集团以其在20世纪70年代获得的高速发展基础，树立了面向未来的长期战略，不断扩大业务领域，为其进入世界市场奠基筑石。在此期间，乐天集团完成了乐天世界的建设工程，成立了釜山乐天大酒店和乐天物产，确保了其在韩国流通、旅游产业的竞争力，并致力于现代化建设。此外，乐天集团通过成立乐天佳能和韩国富士胶卷，加速进军尖端产业的步伐。而且，乐天集团通过成立乐天巨人队和大弘企划，夯实了集团内部文化基础设施；通过成立乐天中央研究所和乐天流通事业本部，为研发新产品及开发和传播流通专业知识起到了巨大作用。
-上20世纪90年代，乐天继续保持流通、旅游、食品产业领先地位的同时，通过保守经营和大胆的投资，为发展成跨国企业奠定了基础。
-2013年，乐天集团的流通部门计划将以各种营业形态不断扩张海外事业，继续加强新增长动力事业的发展。
-在2012年开设中国天津2号店后，乐天百货店还将分别于2013年4月和8月开设“威海店”和“成都店”，进一步稳固在中国实行的多店铺体制。5月，还将开设印度尼西亚“雅加达店”，进军东南亚市场。
-"/>
+                        android:text=""/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -119,6 +112,7 @@
 
     <FrameLayout
         android:id="@+id/readPopView"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -144,6 +138,7 @@
                 android:textSize="39px" />
 
             <TextView
+                android:id="@+id/zddyBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -221,7 +216,7 @@
 
 
         <FrameLayout
-            android:visibility="gone"
+            android:visibility="visible"
             android:id="@+id/upDownView"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
