--- a/tenghen/src/main/res/layout/dialog_gift.xml
+++ b/tenghen/src/main/res/layout/dialog_gift.xml
@@ -39,6 +39,7 @@
             android:layout_height="1px"
             android:layout_weight="1"/>
         <TextView
+            android:id="@+id/rechargeBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="3dp"
@@ -61,6 +62,7 @@
             android:gravity="center"
             android:layout_weight="1">
             <FrameLayout
+                android:id="@+id/coinBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <ImageView
@@ -71,6 +73,7 @@
                 <ImageView
                     android:layout_width="10dp"
                     android:layout_height="10dp"
+                    android:visibility="gone"
                     android:layout_gravity="bottom|right"
                     android:src="@android:drawable/checkbox_on_background"/>
             </FrameLayout>
@@ -98,16 +101,19 @@
             android:gravity="center"
             android:layout_weight="1">
             <FrameLayout
+                android:id="@+id/flowerBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <ImageView
                     android:layout_width="34dp"
                     android:layout_height="34dp"
                     android:scaleType="fitXY"
+
                     android:src="@drawable/ic_gift_flower" />
                 <ImageView
                     android:layout_width="10dp"
                     android:layout_height="10dp"
+                    android:visibility="gone"
                     android:layout_gravity="bottom|right"
                     android:src="@android:drawable/checkbox_on_background"/>
             </FrameLayout>
@@ -135,6 +141,7 @@
             android:gravity="center"
             android:layout_weight="1">
             <FrameLayout
+                android:id="@+id/beerBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <ImageView
@@ -145,6 +152,8 @@
                 <ImageView
                     android:layout_width="10dp"
                     android:layout_height="10dp"
+                    android:visibility="gone"
+
                     android:layout_gravity="bottom|right"
                     android:src="@android:drawable/checkbox_on_background"/>
             </FrameLayout>
@@ -172,6 +181,7 @@
             android:gravity="center"
             android:layout_weight="1">
             <FrameLayout
+                android:id="@+id/macBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <ImageView
@@ -182,6 +192,8 @@
                 <ImageView
                     android:layout_width="10dp"
                     android:layout_height="10dp"
+                    android:visibility="gone"
+
                     android:layout_gravity="bottom|right"
                     android:src="@android:drawable/checkbox_on_background"/>
             </FrameLayout>
@@ -209,6 +221,7 @@
             android:gravity="center"
             android:layout_weight="1">
             <FrameLayout
+                android:id="@+id/carBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <ImageView
@@ -219,6 +232,8 @@
                 <ImageView
                     android:layout_width="10dp"
                     android:layout_height="10dp"
+                    android:visibility="gone"
+
                     android:layout_gravity="bottom|right"
                     android:src="@android:drawable/checkbox_on_background"/>
             </FrameLayout>
@@ -246,6 +261,7 @@
             android:gravity="center"
             android:layout_weight="1">
             <FrameLayout
+                android:id="@+id/houseBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <ImageView
@@ -255,6 +271,8 @@
                     android:src="@drawable/ic_gif_house" />
                 <ImageView
                     android:layout_width="10dp"
+                    android:visibility="gone"
+
                     android:layout_height="10dp"
                     android:layout_gravity="bottom|right"
                     android:src="@android:drawable/checkbox_on_background"/>
@@ -278,6 +296,7 @@
         </LinearLayout>
     </LinearLayout>
     <TextView
+        android:id="@+id/sendBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
