--- a/tenghen/src/main/res/layout/item_book_detail_gift.xml
+++ b/tenghen/src/main/res/layout/item_book_detail_gift.xml
@@ -6,11 +6,26 @@
     android:paddingBottom="40px"
     android:paddingTop="40px"
     android:gravity="center">
-    <ImageView
-        android:id="@+id/giftIv"
-        android:layout_width="228px"
-        android:layout_height="210px"
-        android:background="@drawable/shape_white_black_stroke_rect"/>
+    <FrameLayout
+        android:id="@+id/checkBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/giftIv"
+            android:layout_width="228px"
+            android:layout_height="210px"
+
+            android:background="@drawable/shape_white_black_stroke_rect"/>
+        <ImageView
+            android:id="@+id/checkbox"
+            android:layout_gravity="bottom|right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/checkbox_on_background"/>
+    </FrameLayout>
+
+
 
 
 </LinearLayout>
