--- a/tenghen/src/main/res/layout/item_book_detail_gift_label.xml
+++ b/tenghen/src/main/res/layout/item_book_detail_gift_label.xml
@@ -18,6 +18,7 @@
         android:layout_height="1px"
         android:layout_weight="1"/>
     <TextView
+        android:id="@+id/giftBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="42px"
