--- a/tenghen/src/main/res/layout/activity_login.xml
+++ b/tenghen/src/main/res/layout/activity_login.xml
@@ -11,13 +11,47 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="96px"
         android:src="@drawable/logo"/>
+    <LinearLayout
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="81px"
+        android:layout_marginLeft="69px"
+        android:layout_marginRight="69px"
+        android:layout_marginTop="54px"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/phoneRegisterBtn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textColor="@drawable/selector_text_color_register"
+            android:background="@drawable/selector_btn_register_type"
+            android:textSize="33px"
+            android:text="手机号登录"
+            />
+        <View
+            android:layout_width="78px"
+            android:layout_height="1px"/>
+        <TextView
+            android:id="@+id/emailRegisterBtn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textColor="@drawable/selector_text_color_register"
+            android:background="@drawable/selector_btn_register_type"
+            android:textSize="33px"
+            android:text="邮箱登录"
+            />
+    </LinearLayout>
     <EditText
         android:id="@+id/loginUserNameEt"
         android:layout_width="match_parent"
         android:layout_height="111px"
         android:layout_marginLeft="69px"
         android:layout_marginRight="69px"
-        android:layout_marginTop="78px"
+        android:layout_marginTop="54px"
         android:background="@drawable/shape_white_black_stroke_rect"
         android:textColor="@color/black"
         android:textSize="36px"
@@ -32,6 +66,7 @@
         android:layout_marginLeft="69px"
         android:layout_marginRight="69px"
         android:layout_marginTop="54px"
+        android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ_"
         android:background="@drawable/shape_white_black_stroke_rect"
         android:textColor="@color/black"
         android:textSize="36px"
@@ -41,6 +76,48 @@
         android:inputType="textPassword"
         android:hint="密码"/>
     <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/verifyCodeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="111px"
+        android:layout_marginLeft="69px"
+        android:layout_marginRight="69px"
+        android:paddingLeft="48px"
+        android:paddingRight="48px"
+        android:layout_marginTop="54px"
+        android:background="@drawable/shape_white_black_stroke_rect">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="36px"
+            android:text="验证码"/>
+        <EditText
+            android:id="@+id/verifyCodeEt"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="111px"
+            android:layout_marginLeft="51px"
+            android:background="@null"
+            android:textColor="@color/black"
+            android:textSize="36px"
+            android:singleLine="true"
+            android:inputType="number"
+            android:maxLength="6"
+            android:digits="0123456789"
+            android:hint="请输入验证码"/>
+        <TextView
+            android:id="@+id/getVerifyBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="36px"
+            android:textColor="#1585b1"
+            android:text="获取"/>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/resetPwdBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
